<resources>
    <string name="app_name">RickAndMortyApp</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="content_description_character_image">Character poster item</string>
    <string name="name_dummy">Rick Sanchez</string>
    <string name="detail_name">Name:</string>
    <string name="detail_status">Status:</string>
    <string name="detail_specie">Specie:</string>
    <string name="detail_gender">Gender:</string>
    <string name="location">Location</string>
    <string name="detail_planet">Planet:</string>
    <string name="detail_origin">Origin:</string>
    <string name="episodes">Episodes</string>
    <string name="no_data_character">There is not data for this character</string>
    <string name="favorite_description">Favorite Character</string>
    <string name="error_favorite_characters">Error getting favorite characters</string>
    <string name="error_no_available_data">No data available at the moment</string>
</resources>